--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,18 +4,13 @@
 .my-carousel{
     display: flex;
     overflow-x: scroll;
+    border: 1px solid rgb (240, 240, 240);
+
     
 };
+.my-carousel > .my-card{
+    border: 1px solid grey;
+    min-width: 300px;
+    margin-right: 10px;
+}
 
-.my-card-black{
-    min-width: 300px;
-    border: 1px solid black;
-    margin: 10px;
-}
-/* .my-card-black div img{
-    width: 100%
-} */
-.my-card-black div{
-    min-width: 300px;
-    
-}
